--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,11 @@
 V 0.1.0
 =======
 * Player class
-- Glicko class skeleton
-- namespaces
+* Glicko class skeleton
+* namespaces
 - directory structure
 - doxygen file
-
-
-V 0.2.0
-=======
 - add player
 - remove player
 - add games
+- compute ratings
