--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,10 @@ V 0.1.0
 * Player class
 * Glicko class skeleton
 * namespaces
-- directory structure
 - doxygen file
+- exceptions
 - add player
 - remove player
 - add games
 - compute ratings
+- directory structure
