--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@ V 0.1.0
 * namespaces
 * add doxygen file
 * exceptions
-o add player
+* create player
 - remove player
 - add games
 - compute ratings
