--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,6 @@
-V 0.1.0
-=======
-* Player class
-* Glicko class skeleton
-* namespaces
-* add doxygen file
-* exceptions
-* create player
-* remove player
-* add games
-* compute ratings
-* finish doxygen file
-* all in one file
-
 V 0.2.0
 =======
+* switch to std::map and std::list
 - finish documentation
 - add some unit tests
+- add team playing
